configuration for UserRolesAccessibleByProviderOnly added in administration services appmarket registration added

--- a/charts/portal/templates/cronjob-backend-processes.yaml
+++ b/charts/portal/templates/cronjob-backend-processes.yaml
@@ -90,6 +90,10 @@ spec:
               value: "{{ .Values.centralidp.clients.technicalRolesManagement }}"
             - name: "PROVISIONING__DIMUSERROLES__0__USERROLENAMES__0"
               value: "{{ .Values.backend.administration.serviceAccount.dimCreationRoles.role0 }}"
+            - name: "PROVISIONING__USERROLESACCESSIBLEBYPROVIDERONLY__0__CLIENTID"
+              value: "{{ .Values.centralidp.clients.technicalRolesManagement }}"
+            - name: "PROVISIONING__USERROLESACCESSIBLEBYPROVIDERONLY__0__USERROLENAMES__0"
+              value: "{{ .Values.backend.administration.serviceAccount.userRolesAccessibleByProviderOnly.role0 }}"
             - name: "APPLICATIONACTIVATION__APPLICATIONAPPROVALINITIALROLES__0__CLIENTID"
               value: "{{ .Values.centralidp.clients.portal }}"
             - name: "APPLICATIONACTIVATION__APPLICATIONAPPROVALINITIALROLES__0__USERROLENAMES__0"
