adjusted values.yaml

--- a/charts/portal/values.yaml
+++ b/charts/portal/values.yaml
@@ -464,6 +464,8 @@ backend:
           encryptionKey: ""
       dimCreationRoles:
         role0: "Identity Wallet Management"
+      userRolesAccessibleByProviderOnly:
+        role0: "BPDM Sharing Input Consumer"
     swaggerEnabled: false
     frameDocumentTypeIds:
       type0: "CX_FRAME_CONTRACT"
