new roles added in values and respected services

--- a/charts/portal/values.yaml
+++ b/charts/portal/values.yaml
@@ -465,7 +465,9 @@ backend:
       dimCreationRoles:
         role0: "Identity Wallet Management"
       userRolesAccessibleByProviderOnly:
-        role0: "BPDM Sharing Input Consumer"
+        role0: "BPDM Pool Consumer"
+        role1: "BPDM Pool Consumer"
+        role2: "BPDM Sharing Input Manager"
     swaggerEnabled: false
     frameDocumentTypeIds:
       type0: "CX_FRAME_CONTRACT"
