--- a/charts/portal/templates/deployment-backend-services.yaml
+++ b/charts/portal/templates/deployment-backend-services.yaml
@@ -155,6 +155,10 @@ spec:
           value: "{{ .Values.centralidp.clients.technicalRolesManagement }}"
         - name: "PROVISIONING__USERROLESACCESSIBLEBYPROVIDERONLY__0__USERROLENAMES__0"
           value: "{{ .Values.backend.administration.serviceAccount.userRolesAccessibleByProviderOnly.role0 }}"  
+        - name: "PROVISIONING__USERROLESACCESSIBLEBYPROVIDERONLY__0__USERROLENAMES__1"
+          value: "{{ .Values.backend.administration.serviceAccount.userRolesAccessibleByProviderOnly.role1 }}"
+        - name: "PROVISIONING__USERROLESACCESSIBLEBYPROVIDERONLY__0__USERROLENAMES__2"
+          value: "{{ .Values.backend.administration.serviceAccount.userRolesAccessibleByProviderOnly.role2 }}"   
         - name: "SERVICES__APPROVESERVICENOTIFICATIONTYPEIDS__0"
           value: "{{ .Values.backend.services.approveServiceNotificationTypeIds.type0 }}"
         - name: "SERVICES__APPROVESERVICEUSERROLES__0__CLIENTID"
