feat(technicaluser): added configuration for UserRolesAccessibleByProviderOnly  (#496)
Refs: https://github.com/eclipse-tractusx/portal-backend/issues/1240
Co-authored-by: Phil Schneider <info@philschneider.de>
Reviewed-by: Phil Schneider <info@philschneider.de>

--- a/charts/portal/templates/deployment-backend-registration.yaml
+++ b/charts/portal/templates/deployment-backend-registration.yaml
@@ -155,6 +155,14 @@ spec:
           value: "{{ .Values.centralidp.clients.technicalRolesManagement }}"
         - name: "PROVISIONING__DIMUSERROLES__0__USERROLENAMES__0"
           value: "{{ .Values.backend.administration.serviceAccount.dimCreationRoles.role0 }}"
+        - name: "PROVISIONING__USERROLESACCESSIBLEBYPROVIDERONLY__0__CLIENTID"
+          value: "{{ .Values.centralidp.clients.technicalRolesManagement }}"
+        - name: "PROVISIONING__USERROLESACCESSIBLEBYPROVIDERONLY__0__USERROLENAMES__0"
+          value: "{{ .Values.backend.administration.serviceAccount.userRolesAccessibleByProviderOnly.role0 }}"  
+        - name: "PROVISIONING__USERROLESACCESSIBLEBYPROVIDERONLY__0__USERROLENAMES__1"
+          value: "{{ .Values.backend.administration.serviceAccount.userRolesAccessibleByProviderOnly.role1 }}"
+        - name: "PROVISIONING__USERROLESACCESSIBLEBYPROVIDERONLY__0__USERROLENAMES__2"
+          value: "{{ .Values.backend.administration.serviceAccount.userRolesAccessibleByProviderOnly.role2 }}"
         - name: "PROVISIONING__INVITEDUSERINITIALROLES__0__CLIENTID"
           value: "{{ .Values.centralidp.clients.registration }}"
         - name: "APPMARKETPLACE__SERVICEMANAGERROLES__0__USERROLENAMES__0"
