chore(BPDM): Set BPDM pool url (#472)
Ref: #471

--- a/charts/portal/templates/cronjob-backend-processes.yaml
+++ b/charts/portal/templates/cronjob-backend-processes.yaml
@@ -155,6 +155,8 @@ spec:
               value: "{{ .Values.backend.useDimWallet }}"
             - name: "APPLICATIONCHECKLIST__BPDM__STARTSHARINGSTATEASREADY"
               value: "{{ .Values.backend.processesworker.bpdm.startSharingStateAsReady }}"
+            - name: "APPLICATIONCHECKLIST__BPDM__BUSINESSPARTNERPOOLBASEADDRESS"
+              value: "{{ .Values.bpdm.poolAddress }}"
             - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__BASEADDRESS"
               value: "{{ .Values.clearinghouseAddress }}"
             - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__CLIENTID"
