--- a/charts/portal/templates/deployment-backend-services.yaml
+++ b/charts/portal/templates/deployment-backend-services.yaml
@@ -261,6 +261,14 @@ spec:
           value: "{{ .Values.centralidp.clients.technicalRolesManagement }}"
         - name: "SERVICES__DIMUSERROLES__0__USERROLENAMES__0"
           value: "{{ .Values.backend.administration.serviceAccount.dimCreationRoles.role0 }}"
+        - name: "SERVICES__USERROLESACCESSIBLEBYPROVIDERONLY__0__CLIENTID"
+          value: "{{ .Values.centralidp.clients.technicalRolesManagement }}"
+        - name: "SERVICES__USERROLESACCESSIBLEBYPROVIDERONLY__0__USERROLENAMES__0"
+          value: "{{ .Values.backend.administration.serviceAccount.userRolesAccessibleByProviderOnly.role0 }}"
+        - name: "SERVICES__USERROLESACCESSIBLEBYPROVIDERONLY__0__USERROLENAMES__1"
+          value: "{{ .Values.backend.administration.serviceAccount.userRolesAccessibleByProviderOnly.role1 }}"
+        - name: "SERVICES__USERROLESACCESSIBLEBYPROVIDERONLY__0__USERROLENAMES__2"
+          value: "{{ .Values.backend.administration.serviceAccount.userRolesAccessibleByProviderOnly.role2 }}"
         - name: "MAILINGPROCESSCREATION__ENCRYPTIONCONFIGINDEX"
           value: "{{ .Values.backend.processesworker.mailing.encryptionConfigIndex }}"
         - name: "MAILINGPROCESSCREATION__ENCRYPTIONCONFIGS__0__INDEX"
