chore: fix helm test at upgrade

--- a/.github/workflows/portal-chart-test.yaml
+++ b/.github/workflows/portal-chart-test.yaml
@@ -37,8 +37,8 @@ on:
         type: string
       upgrade_from:
         description: 'portal chart version to upgrade from'
-        # portal version from 24.03 release
-        default: '1.8.0'
+        # portal version from 24.12 release
+        default: '2.3.0'
         required: false
         type: string
 
@@ -102,5 +102,5 @@ jobs:
           helm repo add tractusx-dev https://eclipse-tractusx.github.io/charts/dev
           helm install portal tractusx-dev/portal --version ${{ github.event.inputs.upgrade_from || '2.3.0' }} --set replicaCount=1 --set postgresql.architecture=standalone --wait --wait-for-jobs --namespace upgrade --create-namespace
           helm dependency update charts/portal
-          helm upgrade portal charts/portal --namespace upgrade -f charts/values-test.yaml
+          helm upgrade portal charts/portal --set replicaCount=1 --set postgresql.architecture=standalone --wait --wait-for-jobs --namespace upgrade
         if: github.event_name != 'pull_request' || steps.list-changed.outputs.changed == 'true'
