--- a/charts/portal/templates/deployment-backend-administration.yaml
+++ b/charts/portal/templates/deployment-backend-administration.yaml
@@ -118,7 +118,7 @@ spec:
         - name: "APPLICATIONCHECKLIST__BPDM__STARTSHARINGSTATEASREADY"
           value: "{{ .Values.backend.processesworker.bpdm.startSharingStateAsReady }}"
         - name: "APPLICATIONCHECKLIST__BPDM__BUSINESSPARTNERPOOLBASEADDRESS"
-          value: "{{ .Values.bpdm.poolAddress }}"
+          value: "{{ .Values.bpdm.poolAddress }}{{ .Values.bpdm.poolApiPath }}"
         - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__BASEADDRESS"
           value: "{{ .Values.clearinghouseAddress }}"
         - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__CLIENTID"
