fix(migrationsJob): value of Region field is notnull
Ref: #520

--- a/charts/portal/templates/configmap-backend-seeding-testdata.yaml
+++ b/charts/portal/templates/configmap-backend-seeding-testdata.yaml
@@ -31,7 +31,7 @@ data:
         "date_created": "2022-03-24 18:01:33.306000 +00:00",
         "date_last_changed": "2022-03-24 18:01:33.306000 +00:00",
         "city": "Munich",
-        "region": null,
+        "region": "BY",
         "streetadditional": null,
         "streetname": "Street",
         "streetnumber": "1",
@@ -43,7 +43,7 @@ data:
         "date_created": "2022-03-24 18:01:33.391000 +00:00",
         "date_last_changed": "2022-03-24 18:01:33.391000 +00:00",
         "city": "Berlin",
-        "region": null,
+        "region": "BE",
         "streetadditional": null,
         "streetname": "Street",
         "streetnumber": "4",
@@ -55,7 +55,7 @@ data:
         "date_created": "2022-03-24 18:01:33.435000 +00:00",
         "date_last_changed": "2022-03-24 18:01:33.435000 +00:00",
         "city": "Cologne",
-        "region": null,
+        "region": "NW",
         "streetadditional": null,
         "streetname": "Street",
         "streetnumber": "6",
@@ -67,7 +67,7 @@ data:
         "date_created": "2022-03-24 18:01:33.443000 +00:00",
         "date_last_changed": "2022-03-24 18:01:33.443000 +00:00",
         "city": "Munich",
-        "region": null,
+        "region": "BY",
         "streetadditional": null,
         "streetname": "Street",
         "streetnumber": "17",
@@ -79,7 +79,7 @@ data:
         "date_created": "2022-03-24 18:01:33.428000 +00:00",
         "date_last_changed": "2022-03-24 18:01:33.428000 +00:00",
         "city": "Rome",
-        "region": null,
+        "region": "",
         "streetadditional": null,
         "streetname": "Street",
         "streetnumber": "9",
@@ -91,7 +91,7 @@ data:
         "date_created": "2022-03-24 18:01:33.428000 +00:00",
         "date_last_changed": "2022-03-24 18:01:33.428000 +00:00",
         "city": "Paris",
-        "region": null,
+        "region": "IDF",
         "streetadditional": null,
         "streetname": "Street",
         "streetnumber": "9",
@@ -103,7 +103,7 @@ data:
         "date_created": "2022-03-24 18:01:33.428000 +00:00",
         "date_last_changed": "2022-03-24 18:01:33.428000 +00:00",
         "city": "Vienna",
-        "region": null,
+        "region": "9",
         "streetadditional": null,
         "streetname": "Street",
         "streetnumber": "9",
