feat: Add connectorAllowSdDocumentSkipErrorCode to backend configurations
Error code sent by clearing house allows expected error code to be skipped and continue processing the connector.

Refs: eclipse-tractusx/portal-backend#1301

--- a/charts/portal/templates/cronjob-backend-processes.yaml
+++ b/charts/portal/templates/cronjob-backend-processes.yaml
@@ -224,6 +224,8 @@ spec:
               value: "{{ .Values.backend.placeholder }}"
             - name: "APPLICATIONCHECKLIST__SDFACTORY__CLEARINGHOUSECONNECTDISABLED"
               value: "{{ .Values.clearinghouseConnectDisabled }}"
+            - name: "APPLICATIONCHECKLIST__SDFACTORY__CONNECTORALLOWSDDOCUMENTSKIPERRORCODE"
+              value: "{{ .Values.clearinghouseConnectorAllowSdDocumentSkipErrorCode }}"
             - name: "APPLICATIONCHECKLIST__DIM__USERNAME"
               value: "{{ .Values.backend.placeholder }}"
             - name: "APPLICATIONCHECKLIST__DIM__PASSWORD"
