--- a/charts/portal/values.yaml
+++ b/charts/portal/values.yaml
@@ -66,6 +66,8 @@ clearinghouseAddress: "https://validation.example.org"
 clearinghouseTokenAddress: "https://keycloak.example.org/realms/example/protocol/openid-connect/token"
 # -- if set to true the self description document creation will be skipped for company registrations as well as connector registrations
 clearinghouseConnectDisabled: false
+# -- if error code is set, the sd document creation will be skipped if clearing house is sending failure including this error code in the response
+clearinghouseConnectorAllowSdDocumentSkipErrorCode: "E2010"
 
 # -- Provide issuer component base address
 issuerComponentAddress: "https://ssi-credential-issuer.example.org"
