--- a/charts/portal/templates/configmap-backend-seeding-testdata.yaml
+++ b/charts/portal/templates/configmap-backend-seeding-testdata.yaml
@@ -79,7 +79,7 @@ data:
         "date_created": "2022-03-24 18:01:33.428000 +00:00",
         "date_last_changed": "2022-03-24 18:01:33.428000 +00:00",
         "city": "Rome",
-        "region": "",
+        "region": "62",
         "streetadditional": null,
         "streetname": "Street",
         "streetnumber": "9",
