--- a/charts/localdev/Chart.yaml
+++ b/charts/localdev/Chart.yaml
@@ -33,15 +33,15 @@ dependencies:
   - condition: portal.enabled
     name: portal
     repository: file://../portal
-    version: 2.4.0-RC2
+    version: 2.4.0
   - condition: centralidp.enabled
     name: centralidp
     repository: https://eclipse-tractusx.github.io/charts/dev
-    version: 4.1.0-rc.1
+    version: 4.1.0
   - condition: sharedidp.enabled
     name: sharedidp
     repository: https://eclipse-tractusx.github.io/charts/dev
-    version: 4.1.0-rc.1
+    version: 4.1.0
   - condition: pgadmin4.enabled
     name: pgadmin4
     repository: https://helm.runix.net
