feat(clearinghouse): config region specific clearinghouses
Ref: #531

--- a/charts/portal/templates/cronjob-backend-processes.yaml
+++ b/charts/portal/templates/cronjob-backend-processes.yaml
@@ -157,29 +157,50 @@ spec:
               value: "{{ .Values.backend.processesworker.bpdm.startSharingStateAsReady }}"
             - name: "APPLICATIONCHECKLIST__BPDM__BUSINESSPARTNERPOOLBASEADDRESS"
               value: "{{ .Values.bpdm.poolAddress }}{{ .Values.bpdm.poolApiPath }}"
-            - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__BASEADDRESS"
-              value: "{{ .Values.clearinghouseAddress }}"
-            - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__CLIENTID"
-              value: "{{ .Values.backend.processesworker.clearinghouse.clientId }}"
-            - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__CLIENTSECRET"
+            - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__BASEADDRESS"
+              value: "{{ .Values.defaultClearinghouse.baseAddress }}{{ .Values.defaultClearinghouse.apiPath }}"
+            - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__CLIENTID"
+              value: "{{ .Values.backend.processesworker.clearinghouse.defaultClearinghouse.clientId }}"
+            - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__CLIENTSECRET"
               valueFrom:
                 secretKeyRef:
                   name: "{{ .Values.backend.interfaces.secret }}"
-                  key: "clearinghouse-client-secret"
-            - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__GRANTTYPE"
-              value: "{{ .Values.backend.processesworker.clearinghouse.grantType }}"
-            - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__TOKENADDRESS"
-              value: "{{ .Values.clearinghouseTokenAddress }}"
-            - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__PASSWORD"
+                  key: "default-clearinghouse-client-secret"
+            - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__GRANTTYPE"
+              value: "{{ .Values.backend.processesworker.clearinghouse.defaultClearinghouse.grantType }}"
+            - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__TOKENADDRESS"
+              value: "{{ .Values.defaultClearinghouse.tokenAddress }}"
+            - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__PASSWORD"
               value: "{{ .Values.backend.placeholder }}"
-            - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__SCOPE"
-              value: "{{ .Values.backend.processesworker.clearinghouse.scope }}"
-            - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__USERNAME"
+            - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__SCOPE"
+              value: "{{ .Values.backend.processesworker.clearinghouse.defaultClearinghouse.scope }}"
+            - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__USERNAME"
               value: "{{ .Values.backend.placeholder }}"
+            - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__COUNTRYALPHA2CODE"
+              value: "{{ .Values.backend.processesworker.clearinghouse.defaultClearinghouse.countryAlpha2Code }}"
+            - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__REGIONALCLEARINGHOUSECREDENTIALS__0__BASEADDRESS"
+              value: "{{ .Values.regionalClearinghouse.china.baseAddress }}{{ .Values.regionalClearinghouse.china.apiPath }}"
+            - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__REGIONALCLEARINGHOUSECREDENTIALS__0__CLIENTID"
+              value: "{{ .Values.backend.processesworker.clearinghouse.regionalClearinghouse.china.clientId }}"
+            - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__REGIONALCLEARINGHOUSECREDENTIALS__0__CLIENTSECRET"
+              valueFrom:
+                secretKeyRef:
+                  name: "{{ .Values.backend.interfaces.secret }}"
+                  key: "china-clearinghouse-client-secret"
+            - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__REGIONALCLEARINGHOUSECREDENTIALS__0__GRANTTYPE"
+              value: "{{ .Values.backend.processesworker.clearinghouse.regionalClearinghouse.china.grantType }}"
+            - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__REGIONALCLEARINGHOUSECREDENTIALS__0__TOKENADDRESS"
+              value: "{{ .Values.regionalClearinghouse.china.tokenAddress }}"
+            - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__REGIONALCLEARINGHOUSECREDENTIALS__0__PASSWORD"
+              value: "{{ .Values.backend.placeholder }}"
+            - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__REGIONALCLEARINGHOUSECREDENTIALS__0__SCOPE"
+              value: "{{ .Values.backend.processesworker.clearinghouse.regionalClearinghouse.china.scope }}"
+            - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__REGIONALCLEARINGHOUSECREDENTIALS__0__USERNAME"
+              value: "{{ .Values.backend.placeholder }}"
+            - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__REGIONALCLEARINGHOUSECREDENTIALS__0__COUNTRYALPHA2CODE"
+              value: "{{ .Values.backend.processesworker.clearinghouse.regionalClearinghouse.china.countryAlpha2Code }}"
             - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__CALLBACKURL"
               value: "{{ .Values.portalBackendAddress }}{{ .Values.backend.processesworker.clearinghouse.callbackPath }}"
-            - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__USEDIMWALLET"
-              value: "{{ .Values.backend.useDimWallet }}"
             - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__RETRIGGERENDCLEARINGHOUSEINTERVALINDAYS"
               value: "{{ .Values.backend.processesworker.clearinghouse.retriggerEndClearinghouseIntervalInDays }}"
             - name: "APPLICATIONCHECKLIST__CUSTODIAN__BASEADDRESS"
