--- a/environments/helm-values/values-int.yaml
+++ b/environments/helm-values/values-int.yaml
@@ -30,13 +30,21 @@ bpdm:
   portalGateApiPath: "/companies/test-company/v6"
 custodianAddress: "https://managed-identity-wallets-new.int.catena-x.net"
 sdfactoryAddress: "https://sdfactory.int.catena-x.net"
-clearinghouseAddress: "https://digitalidcore.test.dih-cloud.com"
-clearinghouseTokenAddress: "https://iam.test.dih-cloud.com/realms/development/protocol/openid-connect/token"
 issuerComponentAddress: "https://ssi-credential-issuer.int.catena-x.net"
 bpnDidResolverAddress: "http://bdrs-bdrs-server:8081"
 dimWrapper:
   baseAddress: "https://dim.int.catena-x.net"
   tokenAddress: "https://centralidp.int.catena-x.net/auth/realms/CX-Central/protocol/openid-connect/token"
+decentralIdentityManagementAuthAddress: "https://dis-integration-service-prod.eu10.dim.cloud.sap/api/v2.0.0/iatp/catena-x-portal"
+defaultClearinghouse:
+  baseAddress: "https://digitalidcore.test.dih-cloud.com"
+  apiPath: "/api/v2/validation"
+  tokenAddress: "https://iam.test.dih-cloud.com/realms/development/protocol/openid-connect/token"
+regionalClearinghouse:
+  china:
+    baseAddress: "https://ch.bitfactory.cn"
+    apiPath: "/notary/api/v2/validation"
+    tokenAddress: "https://ch.bitfactory.cn/notary/auth/get/accessToken"
 decentralIdentityManagementAuthAddress: "https://dis-integration-service-prod.eu10.dim.cloud.sap/api/v2.0.0/iatp/catena-x-portal"
 bpnDidResolver:
   managementApiAddress: "http://bdrs-bdrs-server:8081"
@@ -238,8 +246,13 @@ backend:
       clientId: "<path:portal/data/portal-iam-clientIds#bpdm-client-id>"
       clientSecret: "<path:portal/data/int/iam/centralidp-client-secrets#portal-bpdm-sa>"
     clearinghouse:
-      clientId: "<path:portal/data/int/clearinghouse#client-id>"
-      clientSecret: "<path:portal/data/int/clearinghouse#client-secret>"
+      defaultClearinghouse:
+        clientId: "<path:portal/data/int/clearinghouse#default-client-id>"
+        clientSecret: "<path:portal/data/int/clearinghouse#default-client-secret>"
+      regionalClearinghouse:
+        china:
+          clientId: "<path:portal/data/int/clearinghouse#china-client-id>"
+          clientSecret: "<path:portal/data/int/clearinghouse#china-client-secret>"
     custodian:
       clientId: "<path:portal/data/portal-iam-clientIds#custodian-client-id>"
       clientSecret: "<path:portal/data/int/iam/centralidp-client-secrets#custodian-sa>"
